--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -4,24 +4,27 @@
 
 My name is \textsf{Jiuning Chen}. I'm currently doing research related to image processing, computer vision, convex optimization and machine learning.\par
 
-\subsection{Programming Background}
+There're two non-GSoC plans in the summer
+As a GSoC project, 40+ hours per week can be guaranteed on this project.
 
-I started to use \langmatlab to do research on image processing in the end of 2016, met and immediately fell in love with \langjulia at Aug 9, 2018\footnote{It's the day after the historic announcement of \langjulia \version{1.0}.}, and learned \langpython during the Spring Festival of 2019. \par
+\subsection*{Programming Background}
 
-Although my programming career is only about three years, however, I think I'm qualified to achieve the project milestones for the contributions I've done to the \langjulia{} community:
+I started to use \langmatlab to do research on image processing in the end of 2016, met  \langjulia after its \version{1.0} announcement, and learned \langpython during the Spring Festival of 2019. \par
+
+Although my programming career is less than three years, however, I think I'm qualified to achieve the project expectations for the non-trivial contributions I've done to the \langjulia{} community:
 
 \begin{itemize}
-    \item PR: \pullrequest{\juliaimages}{\imagetransformations}{58} reviewed by \evizero and \timholy;
-    \item PR: \pullrequest{\juliaimages}{\imagetransformations}{59} reviewed by \evizero and \timholy;
-    \item PR: \pullrequest{\juliaimages}{\imagedistance}{8} reviewed by \julio;
-    \item PR: \pullrequest{\juliaimages}{\testimages}{35} reviewed by \timholy;
-    \item PR: \pullrequest{\julialang}{julia}{29626} reviewed by \mbauman;
-    \item PR: \pullrequest{\fluxml}{\flux}{372} reviewed by \mikeinnes;
-    \item PR: \pullrequest{\fluxml}{\flux}{371} reviewed by \mikeinnes;
+    \item PR(merged): \pullrequest{\juliaimages}{\imagetransformations}{58} reviewed by \evizero and \timholy;
+    \item PR(merged): \pullrequest{\juliaimages}{\imagetransformations}{59} reviewed by \evizero and \timholy;
+    \item PR(merged): \pullrequest{\juliaimages}{\imagedistance}{8} reviewed by \julio;
+    \item PR(merged): \pullrequest{\juliaimages}{\testimages}{35} reviewed by \timholy;
+    \item PR(merged): \pullrequest{\julialang}{julia}{29626} reviewed by \mbauman;
+    \item PR(merged): \pullrequest{\fluxml}{\flux}{372} reviewed by \mikeinnes;
+    \item PR(merged): \pullrequest{\fluxml}{\flux}{371} reviewed by \mikeinnes;
 \end{itemize}
 to members in the lab of my supervisor:
 \begin{itemize}
-    \item Set up the whole self-hosted research platform independently from scratch for my supervisor's laboratory\footnote{The platform includes but not limited to homepage, documents for users and administrators, server monitor, gitlab, jupyterhub, sharelatex, DNS servers, and VPN servers. I'd like to show you how this looks like but it's all built in a LAN environment.};
+    \item Independently set up the whole self-hosted research platform from scratch for my supervisor's laboratory\footnote{The platform includes but not limited to homepage, documents for users and administrators, server monitor, gitlab, jupyterhub, sharelatex, DNS servers, and VPN servers.};
     \item \textit{De facto} maintainer of the deep learning servers of the School of Mathematical Sciences, and that of a laboratory in Computer Sciences Department;
     \item Proudly create and maintain the homepage of my supervisor, prof. \href{http://math.ecnu.edu.cn/~fli/}{\textsf{Fang Li}};
 \end{itemize}
@@ -38,13 +41,13 @@ The following is an informal self-evaluation to let you have a more structural o
     \item \textbf{Linux (7/10)}: heavy usage of docker, bash, git and vim in my daily work to maintain the servers;
     \item \textbf{Matlab (8/10)}: the only programming language used throughout my early-stage of research;
     \item \textbf{Julia (6/10)}: fully understand and stick to the philosophy of \langjulia, but lack of real project experience;
-    \item \textbf{Related packages (6/10)}: familiar with other open-source image-processing packages but haven't dig into them yet;
+    \item \textbf{Related packages (6/10)}: familiar with other image-processing packages but haven't dig into the source code of them yet;
 \end{itemize}
 
-\subsection{Education Background}
+\subsection*{Education Background}
 
 \begin{description}
-    \item[2016-Present (Postgraduate)]\footnote{The author just passed the Ph.D qualification examination and will be a Ph.D candidate in September 2019.} Study on image processing and computer vision in School of Mathematical Sciences, East China Normal University, and supervised by Prof. \href{http://math.ecnu.edu.cn/~fli/}{\textsf{Fang Li}}.
+    \item[2016-Present (Postgraduate)]Study on image processing and computer vision in School of Mathematical Sciences, East China Normal University, and supervised by Prof. \href{http://math.ecnu.edu.cn/~fli/}{\textsf{Fang Li}}.
     \item[2013-2016 (Undergraduate)] Bachelor of philosophy, Department of Philosophy, Shanghai University.
     \item[2011-2013 (Undergraduate)] Study on metal material in School of Material Sciences, Shanghai University.
 \end{description}
