add note on working hours per week

--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -2,10 +2,7 @@
 
 \section{About the Author}\label{sec:about_author}
 
-My name is \textsf{Jiuning Chen}. I'm currently doing research related to image processing, computer vision, convex optimization and machine learning.\par
-
-There're two non-GSoC plans in the summer
-As a GSoC project, 40+ hours per week can be guaranteed on this project.
+My name is \textsf{Jiuning Chen}. I'm currently doing research related to image processing, computer vision, convex optimization and machine learning. 40+ hours per week can be guaranteed on this project.
 
 \subsection*{Programming Background}
 
