--- a/Proposal/project.tex
+++ b/Proposal/project.tex
@@ -9,7 +9,7 @@ However, despite of the not yet benchmarked performance, this toolbox at present
 Some apparent causes for its poor usability are:
 \begin{itemize}
     \item there're few demos or recipes in \images{} for new users to start with;
-    \item the API varies greatly across Images.jl submodules, and can be unintuitive the non-expert;
+    \item the API varies greatly across Images.jl submodules, and can be unintuitive to the non-experts;
     \item there's no image-processing-specific style guide on naming and programming, except the \langjulia{} \href{https://docs.julialang.org/en/v1/manual/style-guide/}{style guide};
     \item there're too many temporary helper functions defined everywhere;
     \item \images{} is an ecosystem but it lacks of a comprehensive illustration of its packages;
