--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -10,7 +10,7 @@
 
 \input{symbols.tex}
 
-\title{GSoC 2019 Project\\Towards Better Images.jl Ecosystem}
+\title{Towards Better Images.jl Ecosystem}
 \author{Jiuning Chen\mailto{johnnychen94@hotmail.com}\\
 Github: \href{https://github.com/johnnychen94}{Johnnychen94}\\
 Mentors: \zygmunt, \julio, \timholy
